# chain-indexer-monorepo

./: .editorconfig  .env  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
apps/assets-indexer/: Cargo.toml  README.md
apps/assets-indexer/src/: main.rs
apps/assets-indexer/src/config/: mod.rs
apps/assets-indexer/src/services/: mod.rs
apps/assets-indexer/src/services/proccesors/: erc1155_transfer_batch_event_processor.rs  erc1155_transfer_event_processor.rs  erc1155_transfer_single_event_processor.rs  erc721_transfer_event_processor.rs  event_processor.rs  mod.rs
apps/assets-indexer/src/services/processors/: erc1155_transfer_batch_event_processor.rs  erc1155_transfer_single_event_processor.rs  erc721_transfer_event_processor.rs  event_processor.rs  event_processor_utils.rs  mod.rs
apps/assets-indexer/src/services/repositories/: contract_repository.rs  erc1155_repository.rs  erc721_repository.rs  erc721_transfer.rs  mod.rs
apps/chain-watcher/: Cargo.toml  README.md
apps/chain-watcher/src/: main.rs
apps/chain-watcher/src/clients/: blockchain_client.rs  mod.rs  redis_client.rs
apps/chain-watcher/src/config/: mod.rs
apps/chain-watcher/src/core/: sync.rs
apps/chain-watcher/src/services/: mod.rs  sync.rs
apps/chain-watcher/src/services/repositories/: block.rs
libs/common/: Cargo.toml
libs/common/src/: lib.rs  redis.rs  types.rs
libs/common/src/database/: mod.rs
migrations/: 20240309183634_create-block-table.sql  20240309191656_alter-block-table-with-chain-id.sql  20240316183918_alter-table-block-number.sql  20240316184153_revert-alter-table-block-number.sql  20240317162941_create_initial_schema.sql
