[package]
name = "assets-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15" }
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
tokio = { version = "1.36.0", features = ["full"] }
common = { path = "../../libs/common" }
clap = "4.5.2"
async-trait = "0.1.77"
