[package]
name = "chain-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]

dotenv = { version = "0.15" }
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
tokio = { version = "1.36.0", features = ["full"] }
ethers = "2.0"
common = { path = "../../libs/common" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
