[package]
name = "chain-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]

redis = { version = "0.24.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
bb8 = "0.8.3"
bb8-redis = "0.14.0"
tokio = { version = "1.36.0", features = ["full"] }
ethers = "2.0"
common = { path = "../../libs/common" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
num_cpus = "1.16.0"
futures = "0.3.30"
once_cell = "1.19.0"
hashbrown = "0.14.3" 
clap = "4.5.1"
