[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15" }
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] }
bb8 = "0.8.3"
bb8-redis = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ethers = "2.0"
